--- a/css/common.css
+++ b/css/common.css
@@ -165,10 +165,12 @@
     line-height: 31px;
     margin-left: 1px;
     padding:0  10px;
+    transition: all 0.5s;
 }
 .menu_item:hover{
     background-color: #fff;
     color: red;
+    padding-left: 20px;
 }
 /* 鼠标经过li a变颜色 */
 .menu_item:hover a{
