--- a/css/index.css
+++ b/css/index.css
@@ -74,22 +74,202 @@
     height: 32px;
     /* dotted 点线 dashed 虚线 */
     border-bottom: 1px dotted #ccc;
-    font-family: 'icomoon';
     font-size: 14px;
     line-height: 32px;
+    padding-left: 10px;
+    padding-right: 10px;
     
 }
+.news-hd a{
+    float: right;
+    font-size: 12px;
+    font-family: 'icomoon';
+}
 .news-bd{
-
+    padding: 10px 0px 0px 15px;
+}
+.news-bd li{
+    height: 23px;
 }
 .lifeservice{
+    overflow: hidden;
     height: 208px;
-    background-color: purple;
     border: 1px solid #ccc;
     border-top: none;
+}
+.lifeservice ul{
+    width: 252px;
+}
+.lifeservice li{
+    position: relative;
+    float: left;
+    width: 62px;
+    height: 70px;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+}
+.lifeservice li a{
+    display: block;
+    /* 解决i引起的外边距塌陷合并的问题 */
+    overflow: hidden;
+    height: 100%;
+}
+.lifeservice li p{
+    text-align: center;
+}
+.hot{
+    position: absolute;
+    right: 0;top: 0;
+    width: 12px;
+    height: 15px;
+    background: url(../img/jian.jpg) no-repeat;
+}
+.lifeservice_ico{
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url(../img/icons.png) no-repeat;
+    margin: 10px auto;
+}
+.lifeservice_huafei{
+    background-position: -17px -16px;
+}
+.lifeservice_jipiao{
+    width: 26px;
+    background-position: -78px -16px;
 }
 .bargain{
     height: 75px;
     margin-top: 5px;
 
+}
+
+/* 推荐模块 */
+.recommend{
+    height: 163px;
+    margin-top: 10px;
+}
+.recom-hd{
+    float: left;
+    width: 200px;
+    height: 163px;
+    background-color: #5c5251;
+    text-align: center;
+}
+.recom-hd img{
+    margin: 30px 0px 10px 0;
+}
+.recom-hd h3{
+    font-size: 18px;
+    color: #fff;
+    font-weight: normal;
+}
+.recom-bd{
+    float: left;
+    width: 1000px;
+    height: 163px;
+    background-color: #ebebee;
+}
+.recom-bd li{
+    float: left;
+    width: 249px;
+    height: 145px;
+    border-right: 1px solid #ccc;
+    margin-top: 10px;
+}
+.recom-bd .last{
+    border-right: 0px;
+}
+
+
+.box-hd{
+    height: 30px;
+    border-bottom: 2px solid #c81623;
+    margin-top: 25px;
+    line-height: 30px;
+}
+.box-hd h3{
+    float: left;
+    font-size: 18px;
+    color: #c81623;
+}
+.tab-list{
+    float: right;
+}
+.tab-list li{
+    float: left;
+}
+.tab-list li a{
+    margin: 0 15px;
+}
+.box-bd{
+    height: 363px;
+}
+.w209{
+    width: 209px;
+    background-color: #f9f9f9;
+}
+.w329{
+    width: 329px;
+}
+.w219{
+    width: 219px;
+    border-right: 1px solid #ccc;
+}
+.w220{
+    width: 220px;
+    border-right: 1px solid #ccc;
+}
+.tab-con li{
+    float: left;
+    height: 360px;
+}
+.tab-con-item{
+    border-bottom: 1px solid #ccc;
+}
+.tab-con-list li{
+    /* 清除浮动 */
+    overflow: hidden;
+    width: 86px;
+    height: 32px;
+    line-height: 32px;
+    border-bottom: 1px solid #ccc;
+    margin-left: 12px;
+    text-align: center;
+}
+.tab-con-list{
+    margin-bottom: 15px;
+}
+/* 鼠标经过图片 往右走 */
+.box-bd li{
+    overflow: hidden;
+}
+.box-bd img{
+    transition: all 0.2s;
+}
+.box-bd img:hover{
+    margin-left: 8px;
+}
+
+/* 固定电梯 */
+.fixedtool{
+    width: 60px;
+    position: fixed;
+    top: 200px;
+    left: 50%;
+    margin-left: -676px;
+    width: 66px;
+    background-color: #fff;
+}
+.fixedtool li{
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    font-size: 12px;
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+}
+.fixedtool .current{
+    background-color: #c81623;
+    color: #fff;
 }
