--- a/css/list.css
+++ b/css/list.css
@@ -1,1 +1,154 @@
 /* 列表页面的css */
+
+.sk{
+    position: absolute;
+    height: 32px;
+    border-left: 2px solid #b1191a;
+    top: 40px;
+    left: 185px;
+    padding: 5px 0px 0px 15px;
+}
+.sk_list li{
+    float: left;
+    height: 45px;
+    line-height: 45px;
+    margin: 0 30px;
+}
+.sk_list li a{
+    font-size: 18px;
+    color: #000;
+    font-weight: 700;
+}
+.sk_list li a:hover{
+    color: #b1191a;
+}
+.sk_con li{
+    float: left;
+    line-height: 45px;
+    margin: 0 20px;
+}
+.sk_con li a{
+    font-size: 14px;
+    font-weight: 700;
+    font-family: 'icomoon';
+}
+.sk_con li a:hover{
+    color: #b1191a;
+}
+
+/* 列表页内容 */
+.sk_bd{
+    margin-top: 25px;
+}
+.sk_bd ul{
+    width: 1212px;
+}
+.sk_goods{
+    position: relative;
+    float: left;
+    width: 288px;
+    height: 458px;
+    /* 初始 透明 */
+    border:1px solid transparent;
+    /* 上右下左 */
+    margin:0px 12px 15px 0px;
+}
+.sk_goods:hover{
+    border: 1px solid #ee1122;
+}
+.sk_goods_title{
+    font-size: 14px;
+    color: #666;
+    font-weight: normal;
+    padding:10px;
+}
+.sk_goods_price{
+    padding: 0 10px;
+}
+.sk_goods_price em{
+    font-size: 22px;
+    color: #e60012;
+}
+.sk_goods_price del{
+    font-size: 14px;
+    font-weight: 700;
+    color: #a4a4a4;
+}
+.sk_goods_progress{
+    padding: 0 10px;
+}
+.bar{
+    /* 行内块元素 */
+    display: inline-block;
+    width: 130px;
+    height: 10px;
+    border: 1px solid #b1191a;
+    /* 垂直对齐 */
+    vertical-align: middle;
+    margin: 0 5px;
+    border-radius: 5px;
+}
+.bar_in{
+    height: 10px;
+    width: 87%;
+    background-color: #f24349;
+}
+.sk_goods_progress em,
+.sk_goods_progress i{
+    color: #f24349;
+}
+.sk_goods_buy{
+    position: absolute;
+    bottom: 0px;
+    display: block;
+    width: 100%;
+    height: 50px;
+    color: #fff;
+    background-color: #b1191a;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+}
+.page{
+    /* 里面的文字内容 行内块 行内元素 都可以居中对齐 */
+    text-align: center;
+    margin: 40px 0;
+}
+.page_number a{
+    /* 行内块元素 */
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    border: 1PX solid #ccc;
+    background-color: #f7f7f7;
+    line-height: 36px;
+}
+.page_number .page_number_prev,
+.page_number .page_number_next{
+    width: 83px;
+}
+.page_number .current,
+.page_number .dotted{
+    border: 1px solid transparent;
+    background-color: transparent;
+
+}
+.page_skip input{
+    width: 36px;
+    height: 36px;
+    border: 1PX solid #ccc;
+    text-align: center;
+    /* 过渡写在本身上 谁做动画，给谁加 */
+    transition: all 0.3s;
+}
+/* 表单获得焦点后 */
+.page_skip input:focus{
+    width: 88px;
+    border:1px solid skyblue;
+}
+.page_skip button{
+    width: 54px;
+    height: 36px;
+    border: 1PX solid #ccc;
+    background-color: #f7f7f7;
+}
