--- a/css/detail.css
+++ b/css/detail.css
@@ -59,5 +59,239 @@
 /* 二号盒子 详情 */
 .itemInfo_wrap{
     width: 718px;
-    background-color: purple;
+}
+.sku_name{
+    height: 30px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.news{
+    height: 32px;
+    color: #e12228;
+}
+/* 价格 */
+.summary_price,
+.summary_promotion{
+    padding: 10px 0px;
+    background-color: #fee9eb;
+    position: relative;
+}
+.summary dl{
+    /* 清除浮动 */
+    overflow: hidden;
+}
+.summary dt,
+.summary dd{
+    float: left;
+}
+.summary dt{
+    width: 60px;
+    padding-left: 10px;
+    line-height: 36px;
+}
+.price{
+    font-size: 24px;
+    color: #e12228;
+}
+.summary_price a{
+    color: #e12228;
+}
+.remark{
+    position: absolute;
+    right: 10px;
+    top: 20px;
+}
+/* 促销 */
+.summary_promotion{
+    padding-top: 0px;
+}
+.summary_promotion em{
+    display: inline-block;
+    width: 40px;
+    height: 22px;
+    text-align: center;
+    line-height: 22px;
+    color: #fff;
+    background-color: #c81623;
+}
+.summary_promotion dd{
+    width: 450px;
+    line-height: 36px;
+}
+/* 支持 */
+.summary_support dd{
+    line-height: 36px;
+}
+/* 选择颜色 */
+.choose_color a{
+    display: inline-block;
+    width: 80px;
+    height: 41px;
+    background-color: #f7f7f7;
+    border: 1px solid #ededed;
+    text-align: center;
+    line-height: 41px;
+}
+
+.choose_version{
+    margin: 10px 0;
+}
+.choose_version a,
+.choose_type a{
+    display: inline-block;
+    height: 32px;
+    padding: 0 12px;
+    background-color: #f7f7f7;
+    border: 1px solid #ededed;
+    text-align: center;
+    line-height: 32px;
+}
+.summary a.current{
+    border-color: #c81623;
+}
+.choose_btns{
+    margin-top: 20px;
+}
+.choose_amount{
+    position: relative;
+    float: left;
+    width: 50px;
+    height: 46px;
+    background-color: pink;
+}
+.choose_amount input{
+    width: 33px;
+    height: 44px;
+    border: 1px solid #ccc;
+    text-align: center;
+}
+.add,
+.reduce{
+    position: absolute;
+    right: 0;
+    width: 15px;
+    height: 22px;
+    border:1px solid #ccc;
+    background-color: #f1f1f1;
+    text-align: center;
+    line-height: 22px;
+}
+.add{
+    top: 0;
+}
+.reduce{
+    bottom: 0;
+    /* pointer 小手  move移动 */
+    /* 禁止鼠标样式 */
+    cursor: not-allowed;
+}
+.addcar{
+    float: left;
+    width: 142px;
+    height: 46px;
+    background-color: #c81623;
+    text-align: center;
+    line-height: 46px;
+    font-size: 18px;
+    color: #fff;
+    margin-left: 10px;
+    font-weight: 700;
+}
+
+
+/* <!-- 产品细节模块 --> */
+.product_detail{
+    /* 清除浮动 */
+    overflow: hidden;
+    margin-bottom: 50px;
+}
+.aside{
+    float: left;
+    width: 208px;
+    border: 1px solid #ccc;
+}
+
+.tab_list{
+    overflow: hidden;
+    height: 34px;
+}
+.tab_list li{
+    height: 33px;
+    float: left;
+    text-align: center;
+    line-height: 33px;
+    background-color: #f1f1f1;
+    border-bottom: 1px solid #ccc;
+}
+/* 鼠标点击 li 变化样式 背景变白色 去掉下边框 文字变颜色 */
+.tab_list .current{
+    background-color: #fff;
+    border-bottom: 0;
+    color: red;
+}
+.first_tab{
+    width: 104px;
+}
+.second_tab{
+    width: 103px;
+    border-left: 1px solid #ccc;
+}
+
+.tab_con{
+    padding: 0 10px;   
+}
+.tab_con li{
+    border-bottom: 1px solid #ccc;
+}
+.tab_con li h5{
+    /* 一行显示 */
+    white-space: nowrap;
+    overflow: hidden;
+    /* 超出的文字省略号显示 */
+    text-overflow: ellipsis;
+    font-weight: 400;
+}
+.aside_price{
+    font-weight: 700;
+    margin: 10px 0;
+}
+.as_addcar{
+    display: block;
+    width: 88px;
+    height: 26px;
+    border: 1px solid #ccc;
+    background-color: #f7f7f7;
+    margin: 10px auto;
+    text-align: center;
+    line-height: 26px;
+}
+.detail{
+    float: right;
+    width: 978px;
+}
+.detail_tab_list{
+    height: 39px;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+.detail_tab_list li{
+    float: left;
+    height: 39px;
+    line-height: 39px;
+    padding: 0 20px;
+    cursor: pointer;
+}
+.detail_tab_list .current{
+    background-color: #c81623;
+    color: #fff;
+}
+.item_info{
+    padding: 20px 0 0 20px;
+}
+.item_info li{
+    line-height: 22px;
+}
+.more{
+    font-weight: 700;
+    font-family: 'icomoon';
 }
