--- a/css/detail.css
+++ b/css/detail.css
@@ -17,8 +17,39 @@
     height: 590px;
 }
 .preview_img{
+    position: relative;
     height: 398px;
     border:1px solid #ccc;
+}
+.mask{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background-color: #fede4f;
+    /* 半透明 */
+    opacity: .5;
+    border: 1px solid #ccc;
+    cursor: move;
+}
+.big{
+    display: none;
+    position: absolute;
+    left: 410px;
+    top: 0;
+    width: 500px;
+    height: 500px;
+    border: 1px solid #ccc;
+    /* 提高层级 */
+    z-index: 999;
+    overflow: hidden;
+}
+.big img{
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .preview_list{
     position: relative;
@@ -284,6 +315,9 @@
 .detail_tab_list .current{
     background-color: #c81623;
     color: #fff;
+}
+.item{
+    display: none;
 }
 .item_info{
     padding: 20px 0 0 20px;
