--- a/css/index.css
+++ b/css/index.css
@@ -21,44 +21,65 @@
     height: 455px;
     margin: 10px 0px 0px 219px;
 }
-.focus{
+
+.focus {
     position: relative;
-    width: 720px;
+    width: 721px;
     height: 455px;
     background-color: purple;
+    overflow: hidden;
 }
+
+.focus ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 600%;
+}
+
+.focus ul li {
+    float: left;
+}
+
 .arrow-l,
-.arrow-r{
+.arrow-r {
+    display: none;
     position: absolute;
     top: 50%;
     margin-top: -20px;
     width: 24px;
     height: 40px;
-    /* 半透明效果 */
-    background: rgba(0, 0, 0, 0.3);
-    font-family: 'icomoon';
+    background: rgba(0, 0, 0, .3);
     text-align: center;
     line-height: 40px;
-    font-size: 20px;
+    color: #fff;
+    font-family: 'icomoon';
+    font-size: 18px;
+    z-index: 2;
 }
-.arrow-r{
-     right:0;
+
+.arrow-r {
+    right: 0;
 }
-.circle{
+
+.circle {
     position: absolute;
     bottom: 10px;
     left: 50px;
 }
-.circle li{
+
+.circle li {
     float: left;
     width: 8px;
     height: 8px;
-    border: 1px solid rgba(255, 255, 255, 0.7);
+    /*background-color: #fff;*/
+    border: 2px solid rgba(255, 255, 255, 0.5);
     margin: 0 3px;
     border-radius: 50%;
-    /* 鼠标经过变小手 */
+    /*鼠标经过显示小手*/
     cursor: pointer;
 }
+
 .current{
     background-color: #fff;
 }
@@ -253,6 +274,7 @@
 
 /* 固定电梯 */
 .fixedtool{
+    display: none;
     width: 60px;
     position: fixed;
     top: 200px;
